Ignore if generated files appear

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
+/beers.pkl
+/fig/abeona.png
+/fig/augustus.png
+/fig/colossus.png
+/fig/cyclops.png
+/fig/dionysus.png
+/fig/icarus.png
+/fig/jericho.png
+/fig/jupiter.png
+/fig/justinian.png
+/fig/mammon.png
+/fig/medea.png
+/fig/medusa.png
+/fig/minerva.png
+/fig/minotaur.png
+/fig/neptune.png
+/fig/nero.png
+/fig/nike.png
+/fig/nimrud.png
+/fig/orpheus.png
+/fig/pantheon.png
+/fig/pegasus.png
+/fig/proteus.png
+/fig/saturnalia.png
+/fig/sparta.png
+/fig/tiki.png
+/fig/troy.png
+/happyhour_generated.fdb_latexmk
 #################
 ## Eclipse
 #################
